force-app/main/default/objects/RedditPost__c/RedditPost__c.object-meta.xml
<CustomObject>
    <label>RedditPost</label>
    <nameField>
        <label>RedditPost Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RedditPosts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>