force-app/main/default/objects/RedditPost__c/fields/author__c.field-meta.xml
<CustomField>
    <fullName>author__c</fullName>
    <label>author</label>
    <length>250</length>
    <type>Text</type>
</CustomField>