force-app/main/default/objects/RedditPost__c/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <description>RedditPost&#39;s Title</description>
    <label>Title</label>
    <length>250</length>
    <type>Text</type>
</CustomField>